# django-aiogram-template

./: .env.example  .gitignore  Makefile  README.md
backend/: .dockerignore  pyproject.toml  start_backend.sh
backend/app/: asgi.py  settings.py  urls.py
backend/contexts/users/: api.py  apps.py  schemas.py
backend/core/: auth.py  typedefs.py
backend/core/admin/: __init__.py  user.py
backend/core/migrations/: 0001_initial.py
backend/core/models/: user.py
backend/providers/: env.py  logger.py
bot/: Dockerfile  pyproject.toml  start_bot.sh
bot/app/: container.py  root_router.py  run_bot.py
bot/contexts/users/: states.py
bot/contexts/users/dialogs/: menu.py
bot/core/: api.py  di.py  dtos.py  filters.py
bot/providers/: api.py  bot.py  di.py  env.py
docker/: app.compose.yaml  infra.compose.yaml  nginx.conf
