[project]
name = "bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "aiogram-dialog>=2.4.0",
    "dishka>=1.6.0",
    "environs>=14.3.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "redis>=6.4.0",
    "uvloop>=0.21.0",
]

# ====================
# Ruff configuration
# ====================

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "__pycache__", ".git", ".mypy_cache"]

[tool.ruff.lint.isort]
known-first-party = ["app", "contexts", "core", "lib", "providers"]
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
